source/common/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>IncludeForWebMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes the campaign in the sync data that is used for web and mobile sign-ups</description>
        <label>Include for Web &amp; Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogoImage__c</fullName>
        <description>The Logo</description>
        <formula>IMAGE( LogoURL__c, &apos;Group Logo&apos;, 84, 125)</formula>
        <label>Logo Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <description>The logo url for the campaign group</description>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True = file has been processed.  False = will be picked up in next iteration of the processing job.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mongoId__c</fullName>
        <externalId>true</externalId>
        <label>Mongo ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
</CustomObject>